Fixed overlapping of image and text

--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,11 @@
 	text-align: center;
 	color: white;
 	font-family: 'medium';
-	font-size: auto;
+	font-size: 30px;
 	line-height: 30px;
 	padding-bottom: 40px;
+	margin-right: 100px;
+	margin-left: 100px;
 }
 
 .icons{
@@ -305,7 +307,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	margin-top: 20px;
+	padding:50px 100px 100px 100px;
 }
 #section3 .text_block{
 	width: 100%;
@@ -425,6 +427,7 @@
 	position: relative;
 	width: 100%;
 	height: 50%;
+	padding: 10px;
 
 }
 #section4 .text_block{
@@ -442,28 +445,33 @@
 
 }
 #section4 #star1{
-	width: 10%;
+	width: 9%;
 	position: absolute;
 	top: 80%;
 	left: 35%;
 	animation: tada ease-in-out 2s;
 	  animation-iteration-count: infinite;
 	  transform-origin: 50% 50%;
+	  	margin-top: 10px;
+
 }
 #section4 #star2{
-	width: 10%;
+	width: 9%;
 	position: absolute;
 	top: 80%;
 	left: 45%;
 	animation: tada ease-in-out 2s;
   	animation-iteration-count: infinite;
   	transform-origin: 50% 50%;
+  		margin-top: 10px;
+
 }
 #section4 #star3{
-	width: 10%;
+	width: 9%;
 	position: absolute;
 	top: 80%;
 	left: 55%;
+	margin-top: 10px;
 	animation: tada ease-in-out 2s;
   	animation-iteration-count: infinite;
   	transform-origin: 50% 50%;
